--- a/main-prj-01-starting-setup/package.json
+++ b/main-prj-01-starting-setup/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "crypto-js": "^4.1.1",
     "vue": "^3.0.0",
     "vue-router": "^4.1.6",
     "vuex": "^4.1.0"
